--- a/fastly.toml
+++ b/fastly.toml
@@ -8,6 +8,9 @@ manifest_version = 2
 name = "json-web-token-example"
 service_id = ""
 
+[scripts]
+  build = "npm run build"
+
 [local_server]
   [local_server.object_stores]
     [[local_server.object_stores.static_files]]
