--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "type": "module",
+  "scripts": {
+    "build": 	"js-compute-runtime ./src/index.js"
+  },
   "dependencies": {
+    "@fastly/js-compute": "^1.9.0",
     "jose": "^4.13.1"
   },
   "devDependencies": {
