--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "build": 	"js-compute-runtime ./src/index.js"
+    "build": 	"js-compute-runtime ./src/index.js",
+    "start": "fastly compute serve --verbose"
   },
   "dependencies": {
     "@fastly/js-compute": "^1.9.0",
